# dropbox-paper-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-paper-cli-v1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-paper-cli-v1/checklists/: requirements.md
specs/001-paper-cli-v1/contracts/: cli-contract.md
specs/002-httpx-api-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-httpx-api-migration/checklists/: requirements.md
specs/002-httpx-api-migration/contracts/: content-endpoints.md  oauth2-endpoints.md  rpc-endpoints.md
src/dropbox_paper_cli/: __init__.py  __main__.py  app.py
src/dropbox_paper_cli/cli/: auth.py  cache.py  common.py  config.py  files.py  files_browse.py  files_content.py  files_organize.py  sharing.py
src/dropbox_paper_cli/db/: connection.py  schema.py
src/dropbox_paper_cli/lib/: adaptive_limiter.py  config.py  errors.py  http_client.py  output.py  retry.py  url_parser.py
src/dropbox_paper_cli/models/: auth.py  cache.py  items.py  sharing.py  sync.py
src/dropbox_paper_cli/services/: auth_service.py  cache_service.py  dropbox_service.py  sharing_service.py  sync_orchestrator.py
src/dropbox_paper_cli/tui/: __init__.py  search.py
tests/: conftest.py
tests/integration/: test_smoke.py
tests/unit/cli/: test_auth.py  test_cache.py  test_common.py  test_files.py  test_sharing.py
tests/unit/db/: test_connection.py  test_schema.py
tests/unit/lib/: test_adaptive_limiter.py  test_config.py  test_errors.py  test_http_client.py  test_output.py  test_retry.py  test_url_parser.py
tests/unit/models/: test_auth.py  test_cache.py  test_items.py  test_sharing.py
tests/unit/services/: test_auth_service.py  test_cache_service.py  test_dropbox_service.py  test_sharing_service.py
tests/unit/tui/: test_search.py
