[project]
name = "dropbox-paper-cli"
version = "0.1.0"
description = "CLI tool wrapping all Dropbox Paper SDK operations with local metadata caching and keyword search"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.15.0",
    "dropbox>=12.0.0",
]

[project.scripts]
paper = "dropbox_paper_cli.app:app"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "ruff>=0.11.0",
    "ty>=0.0.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dropbox_paper_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dropbox_paper_cli"]
